# block-db

./: Cargo.toml  README.md
blob_server/: .gitignore  Cargo.toml
blob_server/src/: main.rs
blob_server/src/fs/: io.rs
blob_server/src/service/: file_transfer.rs
cli_client/: Cargo.toml
cli_client/src/: app_state.rs  client_state.rs  cmds.rs  connect_cmd.rs  connection.rs  help_cmd.rs  main.rs  status_cmd.rs  terminal.rs
cli_client/src/cli/: cmd.rs  cmds.rs
cli_client/src/cli/commands/: cd.rs  cd_cmd.rs  connect.rs  connect_cmd.rs  get.rs  get_cmd.rs  help.rs  help_cmd.rs  list.rs  list_cmd.rs  net.rs  put.rs  put_cmd.rs  status.rs  status_cmd.rs  unknown.rs
cli_client/src/db/: files_db.rs
cli_client/src/term/: terminal.rs
cli_client/src/utils/: app_state.rs  file_utils.rs
docs/: architecture.md
proto/: message.proto
