[package]
name = "cli_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.17.1"
strum_macros = "0.17.1"
colored = "2"
emojis = "0.6.0"
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rustyline = "11.0.0"
prettytable-rs = "^0.10"
chrono = "0.4.19"
sha2 = "0.9.5"

[build-dependencies]
tonic-build = "0.7"
